# QRCodeScanner

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  api.py  api_request_example.py  desktop_app.py  main.py  object_serialization.py  pyproject.toml  setup.sh  web_app.py
application/: __init__.py  forms.py  routes.py
application/static/css/: style.css
application/templates/: extract_qrcode.html  extracted_qrcode.html  layout.html
outputs/: qr_code_scanner_v1.pkl
src/: engine.py
